# hipCPU

./: CMakeLists.txt  README.md
include/hip/: hip_runtime.h
include/hip/detail/: runtime.hpp
include/hipCPU/hip/: hip_runtime.h
include/hipCPU/hip/detail/: event.hpp  kernel_execution_context.hpp  malloc.hpp  queue.hpp  runtime.hpp  types.hpp
tests/: CMakeLists.txt  basic_kernel.cpp  reduction.cpp
